# Cpp-to-Kotlin-porting-playbook

./: .gitignore  MCP_CONVERT_INTEGRATION.md  Makefile  PROJECT_MAPPING.json  README.md  ai_conversion_config.json  copilot-instructions.md  practical_ai_integration.py
.github/instructions/: cpp-kotlin-port.instructions.md
tools/: ai_chunk_assembler.py  ai_chunk_converter.py  ai_chunk_validator.py  ai_provider_manager.py  chunk_tracker.py  demo_ai_workflow.py  enhanced_ai_chunk_converter.py  kotlin_syntax_fixer.py  mark_converted.py  mcp_native_converter.py  simple_mcp_client.py  systematic_converter.py  tree_traversal_chunker.py
tools/accuracy/: README.md  cases.json  compare.py  lst_accuracy.py  setup_cpp_ref.py
tools/accuracy/cpp_ref/: CMakeLists.txt
tools/lst/: README.md  build_lst.py  index_symbols.py  json_writer.lst.json  json_writer.lst.md  lst.schema.json  run_all.py  symbols.index.json  to_md.py  to_md_all.py  verify.py
tools/mcp/: MCP_USAGE.md  README.md  chunker.py  coarse_assembler.py  coarse_chunk_converter.py  coarse_grained_chunker.py  enhance_chunks_with_relationships.py  mcp_config.json  orchestrator.py  relationship_aware_chunker.py  requirements.txt  server.py
tools/porting/: PROJECT_MAPPING.template.json  README.md  bootstrap.py
tools/porting/template-repo/: Makefile  PROJECT_MAPPING.template.json  README.md
tools/porting/template-repo/tools/accuracy/: cases.json  compare.py
